--- a/draftone.html
+++ b/draftone.html
@@ -68,15 +68,15 @@
   </style>
 </head>
 
-<body>
+<body ng-app="app">
 
   <nav class="orange"></nav>
 
   <div class="container-fluid">
-    <div class="row">
+    <div class="row" ng-controller="pos">
 
 
-      <div class="card large grey darken-4 col l8 m8 s8 left">
+  <div class="card large grey darken-4 col l8 m8 s8 left">
 
        <div class="card small col m12 yellow lighten-4 z-depth-2 user">
 
@@ -89,30 +89,30 @@
             <h5>Dues : Rs 435</h5>
           </div>
           <div class="col m4">
-            <a class="waves-effect waves-light btn z-depth-2">Add to dues</a>
+            <a class="waves-effect waves-light btn z-depth-2" ng-click="add()">Add to dues</a>
           </div>
         </div><!-- userdetails -->
 
 
-      </div><!-- small card user -->
+       </div><!-- small card user -->
 
-      <div class="card small col m12 yellow lighten-4 z-depth-2 cart">
+       <div class="card small col m12 yellow lighten-4 z-depth-2 cart">
 
 
        <div class="items">
         <ul class="collapsible popout" data-collapsible="accordion">
-          <li class="dismissable">
-            <div class="collapsible-header">Pepsi 500ml <div class="right">Rs 38</div></div>
+          <li class="dismissable" ng-repeat="item in items">
+            <div class="collapsible-header">{{item}}<div class="right">Rs 38</div></div>
             <div class="collapsible-body green lighten-4">
               <a class="waves-effect waves-light btn red darken-3"><i class="mdi-action-highlight-remove left"></i>Remove</a>
               <a class="waves-effect waves-light btn green darken-3 right"></i>Edit</a>
             </div>
           </li>
         </ul> <!-- collapsible -->
-      </div><!-- items div scroll-->
+       </div><!-- items div scroll-->
 
 
-      </div><!-- small card cart -->
+       </div><!-- small card cart -->
 
   </div><!-- card col 8 -->
 
@@ -135,6 +135,7 @@
 
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
 <script type="text/javascript" src="js/materialize.min.js"></script>
 <script type="text/javascript">
 
@@ -147,6 +148,20 @@
       })
 
       </script>
+<script type="text/javascript">
 
+var app = angular.module("app", []);
+
+app.controller("pos", function($scope) {
+  
+  $scope.items = ["Basmati Rice"]
+
+  $scope.add = function() {
+   $scope.items.push("item")
+    
+  }
+})
+
+</script>
 </body>
 </html>
